# rpc

./: CMakeLists.txt  autobuild.sh
example/: friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpcprovider.h  zookeeperutil.h
test/protobuf/: main.cc  test  test.pb.cc  test.pb.h  test.proto
